--- a/number-theory/01-divisor.tex
+++ b/number-theory/01-divisor.tex
@@ -1,4 +1,4 @@
-\begin{definition}[\Wrap{content/magyar=Osztó, content/english=Divisor}]
+\begin{definition}[\Wrap{content/magyar=Oszreturntó, content/english=Divisor}]
   \Wrap{
     content/magyar={Az $a$ osztója $b$-nek és $b$ többszöröse $a$-nak, azaz $a|b$, ha},
     content/english={$a$ is a divisor of $b$ and $b$ is a multiple of $a$ that is to say
