added the compiled things (pdf, sagetex, images) and a warning to use the premature version with care

--- a/lecture_notes.tex
+++ b/lecture_notes.tex
@@ -41,7 +41,7 @@
 
 \usepackage{version}
 \newenvironment{version}{\relax}{\relax}
-%\excludeversion{solution}
+\excludeversion{solution}
 
 
 
@@ -53,7 +53,9 @@
 
 \Title{
   title/english=Applications of Discrete models,
-  title/magyar =Diszkrét modellek alkalmazásai
+  title/magyar =Diszkrét modellek alkalmazásai (fejlesztés alatt álló
+változat\footnote{Terjesztése/elmentése későbbre nem ajánlott még, a friss változat
+javításokkal elérhető itt: \texttt{https://github.com/nagyadam888/discrete-mod/}})
 }
 \Author{
   author/english=Adam Nagy,
